--- a/client/src/style/setup/config.scss
+++ b/client/src/style/setup/config.scss
@@ -11,5 +11,8 @@ $global-z: (
   playlist-layout__main-before: 1,
   playlist-layout__inner: 2,
   playlist-layout__drop-url-overlay: 3,
-  app-toolbar-layout: 4
+  app-toolbar-layout: 4,
+  alertify: 5
 );
+
+$app-toolbar-layout__height: 60px;
